@@ -7,11 +7,12 @@ ifdef(`UTIL_LINUX_NG',
 '',
 ``Build-Depends: texi2html (>= 1.76), gettext, texinfo, dc, pkg-config, dietlibc-dev (>> 0.30) [alpha amd64 arm hppa i386 ia64 powerpc ppc64 s390 sparc], debhelper (>= 7.0), m4
 '')dnl
-Standards-Version: 3.8.2
+Standards-Version: 3.8.3
 Homepage: http://e2fsprogs.sourceforge.net
 
 Package: e2fsck-static
 Priority: optional
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: sash | bash-static | zsh-static | busybox-static | zsh30-static
 Architecture: any
 Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
@@ -27,7 +28,7 @@ Description: statically-linked version of the ext2/ext3/ext4 filesystem checker
 Package: libcomerr2
 Section: libs
 Provides: libcomerr-kth-compat
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
 Description: common error description library
@@ -38,7 +39,7 @@ Description: common error description library
 Package: comerr-dev
 Section: libdevel
 Priority: extra
-Depends: libc6-dev | libc-dev, libcomerr2 (= ${mainBinary})
+Depends: libc6-dev | libc-dev, libcomerr2 (= ${mainBinary}), ${misc:Depends}
 Suggests: doc-base
 Replaces: e2fslibs-dev (<< 1.33-2), libkrb5-dev (<< 1.3)
 Architecture: any
@@ -51,7 +52,7 @@ Description: common error description library - headers and static libraries
 
 Package: libss2
 Section: libs
-Depends: libcomerr2, ${shlibs:Depends}
+Depends: libcomerr2, ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
 Description: command-line interface parsing library
@@ -64,7 +65,7 @@ Description: command-line interface parsing library
 Package: ss-dev
 Section: libdevel
 Priority: extra
-Depends: libc6-dev | libc-dev, libss2 (= ${mainBinary}), comerr-dev
+Depends: libc6-dev | libc-dev, libss2 (= ${mainBinary}), comerr-dev, ${misc:Depends}
 Architecture: any
 Description: command-line interface parsing library - headers and static libraries
  This package includes a tool that parses a command table to generate
@@ -77,7 +78,7 @@ Description: command-line interface parsing library - headers and static librari
 ifdef(`UTIL_LINUX_NG',,``
 Package: libuuid1
 Section: libs
-Depends: passwd, ${shlibs:Depends}
+Depends: passwd, ${shlibs:Depends}, ${misc:Depends}
 Recommends: uuid-runtime
 Replaces: e2fsprogs (<< 1.34-1)
 Architecture: any
@@ -94,7 +95,7 @@ Description: Universally Unique ID library
 Package: uuid-runtime
 Section: libs
 Priority: optional
-Depends: passwd, libuuid1 (>> 1.40.3-1), ${shlibs:Depends}
+Depends: passwd, libuuid1 (>> 1.40.3-1), ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<= 1.40.3-1ubuntu1)
 Architecture: any
 Description: runtime components for the Universally Unique ID library
@@ -130,7 +131,7 @@ Description: stripped down universally unique id library, for debian-installer
 Package: uuid-dev
 Section: libdevel
 Priority: extra
-Depends: libc6-dev | libc-dev, libuuid1 (= ${mainBinary})
+Depends: libc6-dev | libc-dev, libuuid1 (= ${mainBinary}), ${misc:Depends}
 Replaces: e2fslibs-dev (<< 1.15)
 Architecture: any
 Description: universally unique id library - headers and static libraries
@@ -141,7 +142,7 @@ Description: universally unique id library - headers and static libraries
 
 Package: libblkid1
 Section: libs
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Architecture: any
 Description: block device id library
  The blkid library which allows system programs like fsck and 
@@ -154,7 +155,7 @@ Package: libblkid1-udeb
 XC-Package-Type: udeb
 Section: debian-installer
 Priority: optional
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Architecture: any
 Description: stripped down block device id library, for debian-installer
  The blkid library which allows system programs like fsck and 
@@ -168,7 +169,7 @@ Description: stripped down block device id library, for debian-installer
 Package: libblkid-dev
 Section: libdevel
 Priority: extra
-Depends: libc6-dev | libc-dev, libblkid1 (= ${binary:Version})
+Depends: libc6-dev | libc-dev, libblkid1 (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: block device id library - headers and static libraries
  The blkid library which allows system programs like fsck and 
@@ -184,7 +185,7 @@ Package: e2fsprogs-udeb
 XC-Package-Type: udeb
 Section: debian-installer
 Priority: optional
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Architecture: any
 Description: stripped-down versions of e2fsprogs, for debian-installer
  This package is an e2fsprogs package built for a reduced size, so that
@@ -195,7 +196,7 @@ Description: stripped-down versions of e2fsprogs, for debian-installer
 
 Package: e2fslibs
 Section: libs
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.34-1)
 Provides: libext2fs2, libe2p2
 Architecture: any
@@ -212,7 +213,7 @@ Description: ext2/ext3/ext4 file system libraries
 Package: e2fslibs-dev
 Section: libdevel
 Priority: extra
-Depends: libc6-dev | libc-dev, comerr-dev, e2fslibs (= ${binary:Version})
+Depends: libc6-dev | libc-dev, comerr-dev, e2fslibs (= ${binary:Version}), ${misc:Depends}
 Suggests: doc-base
 Provides: ext2fs-dev, e2p-dev
 Replaces: libkrb5-dev (<< 1.3)
@@ -227,7 +228,7 @@ Description: ext2/ext3/ext4 file system libraries - headers and static libraries
 
 Package: e2fsprogs
 Essential: yes
-Pre-Depends: ${shlibs:Depends}
+Pre-Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: gpart, parted, e2fsck-static
 Conflicts: dump (<< 0.4b4-4), quota (<< 1.55-8.1), initscripts (<< 2.85-4), sysvinit (<< 2.85-4)
 Replaces: hurd (<= 20040301-1), libblkid1 (<< 1.38+1.39-WIP-2005.12.10-2), libuuid1 (<< 1.38+1.39-WIP-2005.12.10-2)
@@ -243,7 +244,7 @@ Description: ext2/ext3/ext4 file system utilities
 Package: e2fsprogs-dbg
 Section: debug
 Priority: extra
-Depends: e2fsprogs (= ${binary:Version})
+Depends: e2fsprogs (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for e2fsprogs
  This package includes the debug information useful for debugging e2fsprogs
@@ -254,7 +255,7 @@ ifdef(`UTIL_LINUX_NG',,``
 Package: uuid-runtime-dbg
 Section: debug
 Priority: extra
-Depends: uuid-runtime (= ${binary:Version})
+Depends: uuid-runtime (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for uuid-runtime
  This package includes the debug information useful for debugging the
@@ -266,7 +267,7 @@ Description: debugging information for uuid-runtime
 Package: e2fslibs-dbg
 Section: debug
 Priority: extra
-Depends: e2fslibs (= ${binary:Version})
+Depends: e2fslibs (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for e2fslibs
  This package includes the debug information useful for debugging the
@@ -276,7 +277,7 @@ Description: debugging information for e2fslibs
 Package: libcomerr2-dbg
 Section: debug
 Priority: extra
-Depends: libcomerr2 (= ${binary:Version})
+Depends: libcomerr2 (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for libcomerr2
  This package includes the debug information useful for debugging the
@@ -286,7 +287,7 @@ Description: debugging information for libcomerr2
 Package: libss2-dbg
 Section: debug
 Priority: extra
-Depends: libss2 (= ${binary:Version})
+Depends: libss2 (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for libss2
  This package includes the debug information useful for debugging the
@@ -296,7 +297,7 @@ ifdef(`UTIL_LINUX_NG',,``
 Package: libblkid1-dbg
 Section: debug
 Priority: extra
-Depends: libblkid1 (= ${binary:Version})
+Depends: libblkid1 (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for libblkid1
  This package includes the debug information useful for debugging the
@@ -306,7 +307,7 @@ Description: debugging information for libblkid1
 Package: libuuid1-dbg
 Section: debug
 Priority: extra
-Depends: libuuid1 (= ${binary:Version})
+Depends: libuuid1 (= ${binary:Version}), ${misc:Depends}
 Architecture: any
 Description: debugging information for libuuid1
  This package includes the debug information useful for debugging the
